# discord-bot

./: CMakeLists.txt
src/: main.cpp  main.hpp
src/bot/: datatypes.hpp
src/bot/api/: api.hpp  channel.hpp  user.hpp
src/bot/client/: client.cpp  client.hpp
src/bot/commands/: commands.cpp  commands.hpp
src/bot/connection/: heartbeat.cpp  heartbeat.hpp  websocket.cpp  websocket.hpp
src/bot/events/: command_handler.cpp  command_handler.hpp  event_handler.cpp  event_handler.hpp  message_create.cpp  message_create.hpp
src/bot/threadpool/: threadpool.cpp  threadpool.hpp
